--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.18.0",
     "mini-css-extract-plugin": "^0.4.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
