--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
+    "stylelint": "^9.2.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-webpack-plugin": "^0.10.4",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.1",
     "webpack-dev-middleware": "^3.1.3",
