--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-node_modules
+.idea
+.tmp/
+/node_modules
+prd/
+npm-debug.log
+examples/**/package-lock.json
+examples/**/node_modules
+stats.json
+yarn.lock
+/.gitlab
+/.github
+/sh
+/test/cases/**/prd
+*.swp
