--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cl-pack",
   "version": "0.0.1",
   "description": "A packing tool based on webpack4",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && babel src -d dist"
@@ -19,7 +19,7 @@
     "dist"
   ],
   "bin": {
-    "cl-pack": "dist/index.js",
+    "cl-pack": "dist/command.js",
     "cl-pack-dev": "dist/pack-dev.js",
     "cl-pack-build": "dist/pack.js"
   },
@@ -49,6 +49,7 @@
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.1",
     "webpack-md5-hash": "0.0.6",
+    "webpack-merge": "^4.1.3",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "devDependencies": {
