--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist && babel src -d dist"
+    "build": "npm run eslint && rimraf dist && babel src -d dist",
+    "eslint": "eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -58,6 +59,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^5.1.0",
+    "eslint-plugin-react": "^7.10.0",
     "node-sass": "^4.9.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
