--- a/package.json
+++ b/package.json
@@ -28,46 +28,50 @@
   "author": "cl",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "commander": "^2.15.1",
-    "css-loader": "^0.28.11",
-    "express": "^4.16.3",
-    "file-loader": "^1.1.11",
+    "chalk": "^2.4.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "commander": "^3.0.2",
+    "css-loader": "^3.2.0",
+    "express": "^4.17.1",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "http-proxy-middleware": "^0.18.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.2",
-    "ora": "^2.1.0",
-    "style-loader": "^0.21.0",
-    "stylelint": "^9.2.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-webpack-plugin": "^0.10.4",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.8.1",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.1",
+    "http-proxy-middleware": "^0.20.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "ora": "^4.0.2",
+    "style-loader": "^1.0.0",
+    "stylelint": "^11.1.1",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-webpack-plugin": "^1.0.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-md5-hash": "0.0.6",
-    "webpack-merge": "^4.1.3",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^5.1.0",
-    "eslint-plugin-react": "^7.10.0",
-    "node-sass": "^4.9.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-router": "^4.3.1",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.1",
+    "eslint": "^6.5.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-router": "^5.1.2",
+    "rimraf": "^3.0.0",
+    "sass-loader": "^8.0.0",
     "webpack-node-externals": "^1.7.2"
   }
 }
