--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cl-pack",
   "version": "0.0.2-3",
   "description": "A packing tool based on webpack4",
-  "main": "./index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run eslint && rimraf dist && babel src -d dist",
@@ -60,6 +60,8 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/runtime": "^7.8.4",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
